<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="Global_Variables" Id="{a6c265d3-24f0-4c94-8227-7e6ead61f239}">
    <Declaration><![CDATA[VAR_GLOBAL
	g_iSizeOfGGOArray : INT := 50;
	
	g_stSystem	:	System_Struct:= (
    	xFirstScan := TRUE
	);
	
	g_DummyVG	:	ST_VG;
	
	
	 fbGetCurTaskIdx : GETCURTASKINDEX;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>